--- a/signup-login/CSS/formStyle1.css
+++ b/signup-login/CSS/formStyle1.css
@@ -1,7 +1,7 @@
 * {box-sizing: border-box}
 
 /* Full-width input fields */
-  input[type=text], input[type=password]{
+  input[type=text]{
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -9,16 +9,20 @@
   border: none;
   background: #f1f1f1;
 }
-
-#position{
-    display: inline-block;
-  border: none;
-  background: #f1f1f1;
-    margin-bottom: 20px;
+input[type=password]{
     width: 100%;
-  padding: 15px;
-    
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
 }
+input[type=text]:focus, input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+}
+
+
 
 #users{
     display: inline-block;
@@ -30,50 +34,12 @@
 
 }
 
-input[type=text]:focus, input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
 hr {
   border: 1px solid #f1f1f1;
   margin-bottom: 25px;
 }
 
-/* Set a style for all buttons */
-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  opacity: 0.9;
-}
-
-button:hover {
-  opacity:1;
-}
-
-
-
-/* Float cancel and signup buttons and add an equal width */
-.signupbtn {
-  float: left;
-  width: 100%;
-}
-
-/* Add padding to container elements */
-.wrapper-main {
-  padding: 16px;
-}
-
-
-
-/* Change styles signup button on extra small screens */
-@media screen and (max-width: 300px) {
-  .signupbtn {
+    .signup-submit {
     width: 100%;
+        
   }
-}
