--- a/signup-login/CSS/formStyle1.css
+++ b/signup-login/CSS/formStyle1.css
@@ -1,45 +1,60 @@
-* {box-sizing: border-box}
+body{
+    margin: 0;
+    padding: 0;
+    background: url(../Images/formBack.jpg);
+    background-size: cover;
+    background-position: center;
+    font-family: sans-serif;
 
-/* Full-width input fields */
-  input[type=text]{
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
 }
-input[type=password]{
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
+.form-group{
+    width: 600px;
+    height: 900px;
+    background: #000;
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;      
+    padding: 70px 30px;
+}
+
+.form-group input[type="submit"]{
     border: none;
-    background: #f1f1f1;
-}
-input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
     outline: none;
-}
-
-
-
-#users{
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
-    margin-bottom: 20px;
-    width: 100%;
-    padding: 15px;
+    height: 40px;
+    background: #fb2525;
+    color: #fff !important;
+    border-radius: 20px;
+    font-size: 18px;
 
 }
 
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
+.form-group input[type="submit"]:hover{
+    cursor: pointer;
+    background: #ffc107;
+    color: #000;        
 }
 
-    .signup-submit {
-    width: 100%;
-        
-  }
+.avatar{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: relative;
+    top: -20px;
+    left: calc(50% - 50px);
+
+}
+
+h2{
+    margin: 0;
+    text-align: center;
+    font-size: 22px;
+    color: #ffc107;
+}
+p{
+    margin: 0;
+    text-align: center;
+    color: #ffc107;
+}
